--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: <%= ENV['POSTGRES_USER'] || `whoami`.chomp %>
+  password: <%= ENV['POSTGRES_PASS'] || '' %>
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
@@ -81,5 +83,3 @@ test:
 production:
   <<: *default
   database: dev_contests_production
-  username: dev_contests
-  password: <%= ENV['DEV_CONTESTS_DATABASE_PASSWORD'] %>
